# rust_projects

./: .gitignore
.github/workflows/: build_and_deploy.yml
candle/: Cargo.toml
candle/src/: main.rs
candle/src/examples/: baseline_model.rs  bert_base_uncased.rs  mod.rs
create_api/: Cargo.toml
create_api/src/: backend.rs  main.rs
create_api/src/backend/: data.rs
local_llm/: .gitignore  cli.py  config.yml  pyproject.toml
local_llm/src/coding_assistant/: __init__.py  agents.py  repo.py
local_llm/src/coding_assistant/llms/: __init__.py  base.py
minigrep/: links.txt  rust.txt
minigrep/src/: lib.rs  main.rs
multi_webserver/: Cargo.toml  readme.md
multi_webserver/src/: lib.rs  main.rs
personal-tech-website/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
personal-tech-website/src/: app.rs  lib.rs  main.rs
personal-tech-website/style/: main.scss
webscraping/: Cargo.toml
webscraping/src/: lib.rs  main.rs
