[package]
name = "candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = "0.8.4"
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
candle-nn = "0.8.4"
# candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.0-alpha.5" }
candle-transformers = "0.8.4"
clap = { version = "4.5.37", features = ["derive"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
