[project]
name = "local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitingest>=0.1.2",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "openai>=1.61.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "typer>=0.15.1",
]
